Blender Internal render depends on viewport not render layer selected layers #40843

Closed
opened 2014-06-27 21:50:11 +02:00 by Konstantins Visnevskis · 11 comments

Vista64, win8, Blender 2.71rc

If render is set to Blender internal and viewport layers are not locked with render layers ("use this scene's active camera and layers instead of local layers" is turned off), hitting F12 renders those layers selected in a viewport over which mouse is, instead of current render-layer ones. Such behavior is not observed in Cycles.
This is "work aroundable" until there is more than one scene. Then hiding layers in one scene hides them in another.

Vista64, win8, Blender 2.71rc If render is set to Blender internal and viewport layers are not locked with render layers ("use this scene's active camera and layers instead of local layers" is turned off), hitting F12 renders those layers selected in a viewport over which mouse is, instead of current render-layer ones. Such behavior is not observed in Cycles. This is "work aroundable" until there is more than one scene. Then hiding layers in one scene hides them in another.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @KonstantinsVisnevskis

Added subscriber: @KonstantinsVisnevskis
Sergey Sharybin self-assigned this 2014-06-27 21:51:03 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

This is proper behavior of Blender Internal engine -- layers age used from the active viewport when hitting F12 from it. It's a missing functionality in Cycles. Will be in Git soon.

This is proper behavior of Blender Internal engine -- layers age used from the active viewport when hitting F12 from it. It's a missing functionality in Cycles. Will be in Git soon.

This issue was referenced by 6ff6883f99

This issue was referenced by 6ff6883f99d2faeb71359b9e2333a684e0ccf5ca

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6ff6883f99.

Closed by commit 6ff6883f99.

Noo - it's other way around! In Cycles it works works great. It's a headache to deal with in internal :)
Viewport shouldn't override anything, especially if it affects final render.
Imagine rendering multipass with multiple scenes, where there are different layers in different scenes to be selected - hitting F12 becomes impossible then.

Noo - it's other way around! In Cycles it works works great. It's a headache to deal with in internal :) Viewport shouldn't override anything, especially if it affects final render. Imagine rendering multipass with multiple scenes, where there are different layers in different scenes to be selected - hitting F12 becomes impossible then.

Isn't that's why there is a link viewport with render layers button? To control whether viewport affects render layes.

Isn't that's why there is a link viewport with render layers button? To control whether viewport affects render layes.

Current BI behavior is what's intended by the design, and it renders what you see in the viewport. it's not that confusing. You can still hit F12 from the other region in order to use scene layers.

The behavior could be changed, but it's an open for discussion question. There'll be always ones who prefers one way and others who prefers different way. For now we'll just be consistent across all the render engines following the original design.

Current BI behavior is what's intended by the design, and it renders what you see in the viewport. it's not that confusing. You can still hit F12 from the other region in order to use scene layers. The behavior could be changed, but it's an open for discussion question. There'll be always ones who prefers one way and others who prefers different way. For now we'll just be consistent across all the render engines following the original design.

Thanks.

Thanks.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40843
No description provided.