Fix T40843: Cycles does not support viewport render override